--- a/lab2/app/src/main/res/values-ru-rRU/strings.xml
+++ b/lab2/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">lab2</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
@@ -11,35 +13,24 @@
     <string name="reply_title">Default reply action</string>
 
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Настройки</string>
 
     <!-- Sync Preferences -->
-    <string name="theme_title">Dark theme</string>
-    <string name="fontsize_title">Font size</string>
-    <string name="language_title">Language</string>
+    <string name="theme_title">Темная тема</string>
+    <string name="fontsize_title">Размер шрифта</string>
+    <string name="language_title">Язык</string>
     <string name="attachment_title">Download incoming attachments</string>
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     <!-- Font Size array-->
-    <string name="small_font">Small</string>
-    <string name="medium_font">Medium</string>
-    <string name="large_font">Large</string>
+    <string name="small_font">Маленький</string>
+    <string name="medium_font">Средний</string>
+    <string name="large_font">Большой</string>
 
 
     <string name="english_language">English</string>
     <string name="russian_language">Русский</string>
 
-
-    <string-array name="FontSize">
-        <item>@string/small_font</item>
-        <item>@string/medium_font</item>
-        <item>@string/large_font</item>
-    </string-array>
-
-    <string-array name="Language">
-        <item>@string/english_language</item>
-        <item>@string/russian_language</item>
-    </string-array>
 </resources>
