--- a/lab2/app/src/main/res/values-ru-rRU/strings.xml
+++ b/lab2/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,17 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">lab2</string>
-    <string name="title_activity_settings">SettingsActivity</string>
-
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
+    <string name="title_activity_settings">Настройки</string>
 
     <string name="action_settings">Настройки</string>
 
@@ -19,10 +9,6 @@
     <string name="theme_title">Темная тема</string>
     <string name="fontsize_title">Размер шрифта</string>
     <string name="language_title">Язык</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     <!-- Font Size array-->
     <string name="small_font">Маленький</string>
@@ -32,5 +18,24 @@
 
     <string name="english_language">English</string>
     <string name="russian_language">Русский</string>
+    <string name="delete_btn">Удал.</string>
+    <string name="edit_btn">Ред.</string>
+    <string name="save_btn">Сохранить</string>
+    <string name="phase_name">Фаза:</string>
+    <string name="ending_duration"> сек\nдлительность</string>
+    <string name="ending_duration_rest"> sec\nотдых</string>
+    <string name="ending_repetitions">\nповт</string>
+    <string name="timer_name">Название:</string>
+    <string name="color_edit">Цвет:</string>
+    <string name="new_phase_btn">Новая фаза</string>
+    <string name="sec">сек</string>
+    <string name="default_phase_name">Название фазы</string>
+    <string name="phase_name_edit">Название:</string>
+    <string name="phase_duration_edit">Длительность фазы (сек):</string>
+    <string name="rest_duration_edit">Длительность отдыха (сек):</string>
+    <string name="repetitions_amount_edit">Количество повторений:</string>
+    <string name="main_activity_title">Таймеры</string>
+    <string name="timer_start_activity_title">Таймер</string>
+    <string name="reps_counting">reps</string>
 
 </resources>
